--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+
+html {
+  @apply bg-gray-900;
+}
+
 .App {
   text-align: center;
+  @apply flex flex-col gap-4;
+  @apply h-screen;
+  @apply items-center;
+  @apply mx-auto;
+  @apply max-h-screen;
+}
+.suggestions_font {
+  @apply font-RedHat;
+  @apply text-2xl;
+  @apply font-bold;
+  @apply lg:text-4xl;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.desc_text {
+  @apply font-RedHat;
+  @apply font-bold;
+  @apply lg:text-xl;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.alt_text {
+  @apply font-RedHat;
+  @apply font-bold;
+  @apply text-white;
+  @apply text-base;
+  @apply md:text-3xl;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.alt_title_text {
+  @apply font-RedHat;
+  @apply font-bold;
+  @apply text-white;
+  @apply text-lg;
+  @apply md:text-2xl;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  @apply w-screen;
+  @apply h-fit;
+  @apply mx-auto;
+  @apply px-2;
+  @apply py-1;
+  @apply text-left;
+  @apply bg-gray-400;
+  @apply opacity-100;
+  @apply font-OpenSans;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modeSelector {
+  @apply bg-transparent;
+  @apply font-extrabold;
+  @apply text-base;
+  @apply md:text-3xl;
+  @apply text-yellow-300;
+  @apply border-b-2 border-yellow-400;
+}
+
+.questionText {
+  @apply font-OpenSans;
+  @apply underline underline-offset-1;
+}
+
+input::-webkit-calendar-picker-indicator {
+  color: rgba(32, 32, 4, 32);
+  opacity: 1;
 }
