--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,13 @@ html {
   @apply px-2;
   @apply py-1;
   @apply text-left;
-  @apply bg-gray-400;
+  /* @apply bg-gray-400; */
   @apply opacity-100;
   @apply font-OpenSans;
+  @apply font-semibold;
+  @apply text-sm;
+  @apply md:text-base;
+  @apply text-white;
 }
 
 .modeSelector {
@@ -70,7 +74,39 @@ html {
   @apply underline underline-offset-1;
 }
 
-input::-webkit-calendar-picker-indicator {
-  color: rgba(32, 32, 4, 32);
-  opacity: 1;
+input[type="time" i]::-webkit-calendar-picker-indicator {
+  /* @apply bg-slate-300; */
+  background-image: url("../public/clock.svg");
+  filter: invert(1);
+}
+
+.form-input-styles {
+  @apply rounded-sm;
+  @apply border-2 border-black;
+}
+.form-submit-button {
+  @apply bg-gray-400;
+  @apply rounded-md;
+  @apply border-2 border-black;
+}
+.form-label-text {
+  @apply text-white;
+  @apply font-RedHat;
+}
+
+/* Toggle A */
+input:checked ~ .dot {
+  transform: translateX(100%);
+  @apply bg-yellow-300;
+}
+.settings-label-font {
+  @apply font-OpenSans;
+  /* @apply font-bold; */
+  @apply text-2xl;
+}
+.settings-indicator-on {
+  @apply font-bold text-red-500;
+}
+.settings-indicator-off {
+  @apply text-gray-300;
 }
